Bug 88237 - Calc crashes with with NLP solver, without JRE installed
Summary: Calc crashes with with NLP solver, without JRE installed
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.6.2 release
Hardware: All All
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.0.1 target:5.1.5
Keywords:
: 91576 92086 98619 101974 (view as bug list)
Depends on:
Blocks: Java-Runtime-JRE
  Show dependency treegraph
 
Reported: 2015-01-09 13:58 UTC by Roman Kuznetsov
Modified: 2016-10-29 09:48 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2015-01-09 13:58:37 UTC
Version: 4.4.0.2
ID build: a3603970151a6ae2596acd62b70112f4d376b990
Locale: ru_RU
OS: Windows 7 x86-64

Without JRE installed!

1. Create new spreadsheet
2. select menu Tools-Solver
3. Displayed screen with warning of absence JRE and one button OK
4. Push OK
5. LO crashed
Comment 1 MM 2015-01-09 14:37:30 UTC
Confirmed with Version: 4.4.0.1 Build ID: 1ba9640ddd424f1f535c75bf2b86703770b8cf6f on mint 17.1 x64.

If java is off, it doesn't matter which button you choose (no/yes/cancel), the program always says: 'Libreoffice 4.4 fatal error  Could not create Java implementation loader' and then exits.
Comment 2 Roman Kuznetsov 2015-03-02 11:42:24 UTC
Version: 4.3.6.2
ID build: d50a87b2e514536ed401c18000dad4660b6a169e
OS: Windows 7 Home Basic x86

bug is reproduced

if the settings are not allowed to use JAVA (even if JAVA is installed), then when you run the Solver will be prompted to authorize the use of JAVA. If this window click "No", then LibreOffice also crash
Comment 3 m.a.riosv 2015-06-15 22:49:40 UTC
*** Bug 92086 has been marked as a duplicate of this bug. ***
Comment 4 Roman Kuznetsov 2015-06-16 05:06:18 UTC
Version: 5.0.0.0.beta3
ID build: 96345c15d8ab19c49014f055fe41ba8e1f421e5c
Locale: ru-RU (ru_RU)
OS: Windows HB (32bit)

bug is reproduced
Comment 5 Buovjaga 2015-06-23 10:49:14 UTC
No crash.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+ (x64)
Build ID: a51ac4d2bb8c4f1ea1d4ea7569863e2fb6535b02
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-06-22_21:37:53
Locale: fi-FI (fi_FI)
Comment 6 Katarina Behrens (Inactive) 2015-06-23 11:32:15 UTC
So I thought I'd fix this one, but I can't reproduce it on Linux (5.0 + master) anymore. 

A similar issue has been fixed for Mac (bug 80370), I haven't found any fix specific for Linux and/or Windows, yet my 4.3.6 crashes and 5.0 doesn't anymore.

Can anyone still reproduce on Linux? Or is this now Windows-only issue?
Comment 7 Marek Dolezel 2015-06-23 17:18:18 UTC
Fedora:
  Version: 4.4.3.2
  Build ID: 4.4.3.2-6.fc22
  Locale: en_GB
  OS: Fedora 22 x64,

  JRE disabled Tools - Options - LibreOffice - Advanced - uncheck Use a Java RE

  not reproducible

Ubuntu:
  Version: 4.4.2.2
  Build ID: 40m0(Build:2)
  Locale: en_US
  OS: Ubuntu 15.04 i386

  JRE disabled Tools - Options - LibreOffice - Advanced - uncheck Use a Java RE
  removed openjdk-7-*

  not reproducible
Comment 8 Katarina Behrens (Inactive) 2015-06-23 21:29:50 UTC
As discussed on IRC today, you need to have NLP solver installed to be able to reproduce the issue
Comment 9 Roman Kuznetsov 2015-07-12 14:39:50 UTC
LibreOffice 5.0.0.3 x64 on Windows 7 HB x86-64(clean typical install) - bug is reproduced!
Comment 10 Carlo 2015-09-29 21:17:17 UTC
Reproduced with LibreOffice 5.0.2.2
Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe
Versione locale: it-IT (it_IT)
on Windows 10 Home x64 with JRE 8u60 (64-bit).
Comment 11 Buovjaga 2015-09-30 04:55:13 UTC
*** Bug 91576 has been marked as a duplicate of this bug. ***
Comment 12 clem 2015-11-27 21:51:07 UTC
Installed LO 5.0.3 and Oracle latest JRE and Apple's old Java 6. java -version outputs this : java version "1.6.0_65"

however FRE seen from LO settings-advanced is only Oracle's 1.8.0_66 at /Library/Internet Plug-Ins/JavaAppletPlugin.plugin/Contents/Home.

Solver works now. This is strangely touchy.
Comment 13 Roman Kuznetsov 2015-11-28 08:25:10 UTC
2clam: please don't change version LO, hardware and OS. Also bug is reproduced from Windows on LO 4.3.6.2
Comment 14 Commit Notification 2016-06-07 09:06:53 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a33d18c1e38dd783e779ca1dbf54e1ad90cae751

Resolves: tdf#88237 crash without java but with nlp solver installed

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2016-06-07 09:16:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=07c32ba5f81a3d2ed66ee182b8a7772d20c4266f&h=libreoffice-5-2

Resolves: tdf#88237 crash without java but with nlp solver installed

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2016-06-07 20:03:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=24f1beffe30e68ad6f19ced885dbee0ba99a7b75&h=libreoffice-5-1

Resolves: tdf#88237 crash without java but with nlp solver installed

It will be available in 5.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Roman Kuznetsov 2016-06-27 19:12:33 UTC
verified fix on Xubuntu 16.04 with LibreOffice 5.2.0.1
Comment 18 Aron Budea 2016-10-28 19:14:13 UTC
*** Bug 98619 has been marked as a duplicate of this bug. ***
Comment 19 Aron Budea 2016-10-29 09:47:29 UTC
*** Bug 101974 has been marked as a duplicate of this bug. ***