Resolves: tdf#88237 crash without java but with nlp solver installed

Change-Id: Ifb451c299e4586a3a38c83a3111f3ac0b46d9315
(cherry picked from commit a33d18c1e38dd783e779ca1dbf54e1ad90cae751)
(cherry picked from commit 07c32ba5f81a3d2ed66ee182b8a7772d20c4266f)
Reviewed-on: https://gerrit.libreoffice.org/26007
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit 24f1beffe30e68ad6f19ced885dbee0ba99a7b75)